SFDC Automation/src/objects/VehicleSearchSetting__c.object
<CustomObject>
    <description>This object will host the pick list values used in the Vehicle Master Inventory Search page. This is a dummy object and no records should be created on this object. The Master Inventory Search page will use the Describe calls to load the pick list values from this object. &apos;Custom Object&apos; is used to store the pick list values instead of &apos;Custom Setting&apos; as there 20+ fields are pick lists in the Master Inventory Search and it is more convenient to house all of them in a custom object than creating 20+ custom settings.</description>
    <fields>
        <fullName>AXLE_Type__c</fullName>
        <label>R. AXLE Type</label>
        <picklist>
            <picklistValues>
                <fullName>AUXILIARY AXLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE AXLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TANDEM AXLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>RVS INTRNL FLEET VS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVS UTC CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVS UTC N EAST RGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVS UTC S EAST RGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVS UTC WEST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA UVS REGION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Available for Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale in Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body_Height__c</fullName>
        <label>Body Height</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>77</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>78</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>82</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>87</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>93</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body_Length__c</fullName>
        <label>Body Length</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body_Rear_Door__c</fullName>
        <label>Body Rear Door</label>
        <picklist>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body_Width__c</fullName>
        <label>Body Width</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>78</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>82</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>97</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>102</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brake_Type__c</fullName>
        <label>Brake Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCManufacturer_Tractor__c</fullName>
        <label>C&amp;C Manufacturer Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>INTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOLV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STRL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCManufacturer_Trailer__c</fullName>
        <label>C&amp;C Manufacturer Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>BREN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FONT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SILV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TREZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBSH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCManufacturer_Truck__c</fullName>
        <label>C&amp;C Manufacturer Truck</label>
        <picklist>
            <picklistValues>
                <fullName>FCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISUZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCModel_Tractor__c</fullName>
        <label>C&amp;C Model Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>4400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>387</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>388</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>379</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCModel_Trailer__c</fullName>
        <label>C&amp;C Model Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>700 ALUM-48/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSRA 53/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU 45/150/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALUM 53/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R-48/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS1R-28/150/96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R-48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R 50/102/162</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>711T-32/162/96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R-53/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7211TZ-1* 45/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R-48/150/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7211TZ-1* 48/156/96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TE100FG 51/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2RA 48/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36RTPUIASW 156/96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941 28/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38` CHICK 156/96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7211TZ-1* 45/156/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA20W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2RA 53/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28RTPEASW96SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS2R-32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT14SS088316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALUM 45/168/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALUM 36/162/102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS-48/102/145</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCModel_Truck__c</fullName>
        <label>C&amp;C Model Truck</label>
        <picklist>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500 HC VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500SHC PANELVAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500 SHC VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500 VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>338</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 144 WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 170 WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 SHC VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4200 LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4300 LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4400 (4X2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4400 (6X4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4700LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4900  (4X2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4900FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7600</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_at_UTC__c</fullName>
        <label>Days at UTC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Field_10__c</fullName>
        <label>PlaceHolder Blank Space</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Field_11__c</fullName>
        <label>PlaceHolder Blank Space</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Field_122__c</fullName>
        <label>PlaceHolder Blank Space</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_HP__c</fullName>
        <label>Eng HP</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>136</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>137</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>148</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>154</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>165</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>173</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>185</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>188</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>193</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>195</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>204</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>205</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>207</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eng_Manufacturer_Tractor__c</fullName>
        <label>Eng Manufacturer Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOLV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eng_Manufacturer_Trailer__c</fullName>
        <label>Eng Manufacturer Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eng_Mfg_Truck__c</fullName>
        <label>Eng Manufacturer Truck</label>
        <picklist>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISUZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOYO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>